Add new scripts

--- a/ME-GraphAU/COPY BP4D DATASET.ipynb
+++ b/ME-GraphAU/COPY BP4D DATASET.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "2598fcef",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "90cb0d90",
    "metadata": {},
    "outputs": [],
@@ -49,9 +49,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e06a869",
+   "metadata": {},
+   "source": [
+    "# Rename file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6400c51b",
+   "metadata": {},
+   "source": [
+    "Remove 00 in the front. e.g. 0001.jpg -> 1.jpg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee64e4ec",
+   "id": "8af516dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/nas/project_data/B1_Behavior/hakim/ME-GraphAU/data/BP4D/img'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78ec7cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "for d in os.listdir(path):\n",
+    "    print(f'Processing {d}')\n",
+    "    sub_dir = os.path.join(path, d)\n",
+    "    for d2 in os.listdir(sub_dir):\n",
+    "        sub_dir2 = os.path.join(sub_dir, d2)\n",
+    "        for f in os.listdir(sub_dir2):\n",
+    "            img_path = os.path.join(sub_dir2, f)\n",
+    "            filename = int(f.split('.')[0])\n",
+    "            if filename < 1000:\n",
+    "                new_filename = str(filename) + '.jpg'\n",
+    "                out_img_path = os.path.join(sub_dir2, new_filename)\n",
+    "                command = \"mv \" + img_path + \" \" + out_img_path\n",
+    "                os.system(command)\n",
+    "                \n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d19c3f89",
+   "metadata": {},
+   "source": [
+    "Rename file on F020/T3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fd4229db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/nas/project_data/B1_Behavior/hakim/ME-GraphAU/data/BP4D/img/F020/T3'\n",
+    "OUT_DIR = '/nas/project_data/B1_Behavior/hakim/ME-GraphAU/img/T3'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d74ee15c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,330):\n",
+    "    filename = str(i) + '.jpg'\n",
+    "    img_path = os.path.join(DIR, filename)\n",
+    "    new_filename = str(i+1) + '.jpg'\n",
+    "    new_img_path = os.path.join(OUT_DIR, new_filename)\n",
+    "    command = \"cp \" + img_path + \" \" + new_img_path\n",
+    "    os.system(command)\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5211f1e",
    "metadata": {},
    "outputs": [],
    "source": []
