Add new scripts

--- a/FI/Preprocessing.ipynb
+++ b/FI/Preprocessing.ipynb
@@ -146,6 +146,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc24ef5d",
+   "metadata": {},
+   "source": [
+    "# Count files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "428c5261",
@@ -174,7 +182,32 @@
    "execution_count": null,
    "id": "4038dfde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165 - mhF4kYTlVUE.002 335\n",
+      "224 - kppgmuWEv-A.001 449\n",
+      "643 - iYVJt41_q7M.002 325\n",
+      "805 - cOirMOCpdo8.005 389\n",
+      "847 - XhgDsQlEnuU.000 447\n",
+      "882 - _ZAqTHlu2ts.001 441\n",
+      "906 - JBdLI6AhJrw.001 347\n",
+      "943 - PWM-bKcs2p8.001 323\n",
+      "1008 - gWCgqVn3m3k.001 329\n",
+      "1153 - xmD4FKMq2rk.005 328\n",
+      "1334 - b39BQbVhOAg.005 416\n",
+      "1564 - upgv7xmOb1I.005 365\n",
+      "1639 - 9uMpKla2OQM.001 431\n",
+      "1893 - cgT-3CHBmKs.003 291\n",
+      "1983 - mKsGK9nCTxw.001 410\n",
+      "2275 - r2HcJYjGK5s.003 129\n",
+      "2319 - 6EMgu2djYrU.004 391\n",
+      "2508 - 48S9_KZvzVw.004 378\n"
+     ]
+    }
+   ],
    "source": [
     "DIR = '/nas/project_data/B1_Behavior/hakim/FI/frames/train'\n",
     "counter = 0\n",
@@ -182,7 +215,8 @@
     "    img_dir = os.path.join(DIR, d)\n",
     "    file_count = len([x for x in os.listdir(img_dir)])\n",
     "    counter += 1\n",
-    "    print(f'{counter} - {d} - {file_count}')"
+    "    if (file_count < 450):\n",
+    "        print(f'{counter} - {d} {file_count}')"
    ]
   },
   {
