Add new scripts

--- a/ME-GraphAU/MTCNN-pytorch.ipynb
+++ b/ME-GraphAU/MTCNN-pytorch.ipynb
@@ -444,65 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8b0f9517",
+   "execution_count": 2,
+   "id": "bf2f08fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def face_alignment(img: np.ndarray,\n",
-    "                   landmarks: np.ndarray,\n",
-    "                   detector: str = 'mtcnn',\n",
-    "                   left_eye_ratio=(0.38, 0.38),\n",
-    "                   output_width=224,\n",
-    "                   output_height=None):\n",
-    "    # expected MTCNN implementation: https://github.com/timesler/facenet-pytorch\n",
-    "\n",
-    "    assert landmarks.shape == (5,2), f'Expected: (5,2), got istead: {landmarks.shape}'\n",
-    "    assert detector in {'mtcnn'}, 'Only MTCNN format is supported right now.'\n",
-    "\n",
-    "    if output_height is None:\n",
-    "        output_height = output_width\n",
-    "\n",
-    "    landmarks = np.rint(landmarks).astype(np.int32)\n",
-    "\n",
-    "    left_eye_x, left_eye_y = landmarks[1,:] # participant's left eye\n",
-    "    right_eye_x, right_eye_y = landmarks[0,:] # participant's right eye\n",
-    "\n",
-    "    dY = right_eye_y - left_eye_y\n",
-    "    dX = right_eye_x - left_eye_x\n",
-    "\n",
-    "    angle = np.degrees(np.arctan2(dY, dX)) - 180\n",
-    "\n",
-    "    center = (int((left_eye_x + right_eye_x) // 2),\n",
-    "                  int((left_eye_y + right_eye_y) // 2))\n",
-    "\n",
-    "    right_eye_ratio_x = 1.0 - left_eye_ratio[0]\n",
-    "    dist = np.sqrt((dX ** 2) + (dY ** 2))\n",
-    "    output_dist = (right_eye_ratio_x - left_eye_ratio[0])\n",
-    "    output_dist *= output_width\n",
-    "    scale = output_dist / dist\n",
-    "\n",
-    "    M = cv2.getRotationMatrix2D(center, angle, scale)\n",
-    "\n",
-    "    t_x = output_width * 0.5\n",
-    "    t_y = output_height * left_eye_ratio[1]\n",
-    "    M[0, 2] += (t_x - center[0])\n",
-    "    M[1, 2] += (t_y - center[1])\n",
-    "\n",
-    "    return cv2.warpAffine(img, M, (output_width, output_height), flags=cv2.INTER_CUBIC)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5c4b758",
-   "metadata": {},
-   "source": [
-    "## Test on a single image"
+    "from face_alignment import face_alignment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "a7426efd",
    "metadata": {},
    "outputs": [],
@@ -516,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "9ccb48c8",
    "metadata": {},
    "outputs": [
