Add scripts for FI

--- a/FI/Preprocessing.ipynb
+++ b/FI/Preprocessing.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "428c5261",
    "metadata": {},
    "outputs": [
@@ -161,35 +161,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "348\n",
-      "349\n",
-      "350\n",
-      "351\n",
-      "352\n",
-      "353\n",
-      "354\n",
-      "355\n",
-      "356\n",
-      "357\n",
-      "358\n",
-      "359\n",
-      "360\n",
-      "361\n",
-      "362\n",
-      "363\n",
-      "364\n",
-      "365\n"
+      "189\n"
      ]
     }
    ],
    "source": [
-    "path = '/nas/project_data/B1_Behavior/hakim/FI/mtcnn/M5_x5J-H2I0.003.pickle'\n",
-    "output = pickle.load(open(path, \"rb\"))\n",
-    "\n",
-    "for i, item in enumerate(output['landmarks']):\n",
-    "    if (item is None):\n",
-    "        print(i)"
+    "path = '/nas/project_data/B1_Behavior/hakim/FI/predictions/train'\n",
+    "counter = 0\n",
+    "for item in os.listdir(path):\n",
+    "    counter += 1\n",
+    "print(counter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "472125a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
