--- a/FI/Preprocessing.ipynb
+++ b/FI/Preprocessing.ipynb
@@ -195,9 +195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "me-graph-au",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "me-graph-au"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
