Add script for me-au

--- a/FI/Calculate mean gesture energy - FI.ipynb
+++ b/FI/Calculate mean gesture energy - FI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "188ca035",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "99f26f45",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "13d378e8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5079c045",
    "metadata": {},
    "outputs": [],
@@ -57,42 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e43570e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10000"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dc86cfc2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 2)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_std = []\n",
     "\n",
@@ -112,31 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "59b4955c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.00265663, 0.00433974],\n",
-       "       [0.00245684, 0.00452592],\n",
-       "       [0.00107583, 0.0059038 ],\n",
-       "       [0.00116471, 0.00620795]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8a900a06",
    "metadata": {},
    "outputs": [],
@@ -148,21 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "48f39ef2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 2)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(PATH, 'rb') as f:\n",
     "    a = np.load(f)\n",
@@ -179,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "89887a8c",
    "metadata": {},
    "outputs": [],
@@ -192,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "6e1c55fe",
    "metadata": {},
    "outputs": [],
@@ -230,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "3cd47f84",
    "metadata": {},
    "outputs": [],
@@ -249,24 +202,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "d20be083",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.00267291, 0.00281855],\n",
-       "       [0.00247605, 0.00313608],\n",
-       "       [0.00108432, 0.00396306],\n",
-       "       [0.00114814, 0.00411384]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_std_smooth = np.array(mean_std_smooth)\n",
     "mean_std_smooth"
@@ -274,20 +213,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "0d0eba55",
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH = '/home/luqman/FI_GESTURE_ENERGY/mean_std_energy_smooth.npy'\n",
-    "with open(PATH, 'wb') as f:\n",
-    "    np.save(f, mean_std_smooth)"
+    "# with open(PATH, 'wb') as f:\n",
+    "#     np.save(f, mean_std_smooth)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "137aba35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH, 'rb') as f:\n",
+    "    a = np.load(f)\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28dbfc20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[:,0].reshape((-1,1)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5606454",
    "metadata": {},
    "outputs": [],
    "source": []
