--- a/ME-GraphAU/MTCNN-pytorch.ipynb
+++ b/ME-GraphAU/MTCNN-pytorch.ipynb
@@ -282,101 +282,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca11c6e8",
-   "metadata": {},
-   "source": [
-    "# Count file in directory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "0e985024",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "DIR = '/nas/project_data/B1_Behavior/hakim/ME-GraphAU/data/BP4D/img'\n",
-    "counter = 0\n",
-    "for d in os.listdir(DIR):\n",
-    "#     img_dir = os.path.join(DIR, d)\n",
-    "#     l = len([name for name in os.listdir(img_dir)])\n",
-    "    counter += 1\n",
-    "print(f'{counter}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a342e64e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 - F002_T1.pickle - 521\n",
-      "2 - F002_T2.pickle - 546\n",
-      "3 - F002_T3.pickle - 251\n",
-      "4 - F002_T4.pickle - 542\n",
-      "5 - F002_T5.pickle - 551\n",
-      "6 - F002_T6.pickle - 553\n",
-      "7 - F002_T7.pickle - 626\n",
-      "8 - F002_T8.pickle - 347\n"
-     ]
-    }
-   ],
-   "source": [
-    "DIR = '/nas/project_data/B1_Behavior/hakim/ME-GraphAU/data/BP4D/mtcnn_out'\n",
-    "counter = 0\n",
-    "for f in os.listdir(DIR):\n",
-    "    if (f[:4] == 'F002'):\n",
-    "        file_path = os.path.join(DIR, f)\n",
-    "        output = pickle.load(open(file_path, \"rb\"))\n",
-    "        counter += 1\n",
-    "        print(f\"{counter} - {f} - {len(output['boxes'])}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "caac2c73",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "745 351\n",
-      "746 352\n",
-      "747 353\n",
-      "748 354\n",
-      "749 355\n",
-      "750 356\n",
-      "751 357\n",
-      "752 358\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = '/nas/project_data/B1_Behavior/hakim/ME-GraphAU/data/BP4D/mtcnn/M009_T4.pickle'\n",
-    "output = pickle.load(open(path, \"rb\"))\n",
-    "counter = 0\n",
-    "\n",
-    "for i, item in enumerate(output['landmarks']):\n",
-    "    if (item is None):\n",
-    "        print(output['frames_idx'][i], i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cebae7c2",
    "metadata": {},
    "source": [
@@ -593,9 +498,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ME-GraphAU",
+   "display_name": "base",
    "language": "python",
-   "name": "me-graphau"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -607,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
