--- a/ME-GraphAU/Copy AU Labels.ipynb
+++ b/ME-GraphAU/Copy AU Labels.ipynb
@@ -62,9 +62,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ME-GraphAU",
+   "display_name": "base",
    "language": "python",
-   "name": "me-graphau"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -76,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
