--- a/UDIVA/Data preparation.ipynb
+++ b/UDIVA/Data preparation.ipynb
@@ -98,16 +98,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aea75a19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = '';"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "8cc78423",
    "metadata": {},
@@ -128,88 +118,61 @@
     "            \n",
     "            label = get_personality(label_df, participant_id)\n",
     "            landmarks = get_landmarks(task, session, par, subset)\n",
-    "            a = landmarks\n",
     "        break   \n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1ce08ba1",
+   "execution_count": 6,
+   "id": "d2e2d117",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = get_landmarks(\"animals\", \"008105\", 1, 'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ce67526",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[679, 238,  11],\n",
-       "       [680, 255,   7],\n",
-       "       [683, 271,   2],\n",
-       "       [686, 286,   0],\n",
-       "       [691, 304,   3],\n",
-       "       [700, 320,  12],\n",
-       "       [710, 333,  27],\n",
-       "       [724, 344,  41],\n",
-       "       [744, 349,  46],\n",
-       "       [764, 344,  42],\n",
-       "       [779, 334,  29],\n",
-       "       [790, 321,  15],\n",
-       "       [799, 305,   5],\n",
-       "       [804, 287,   3],\n",
-       "       [807, 272,   5],\n",
-       "       [810, 256,  10],\n",
-       "       [811, 239,  14],\n",
-       "       [692, 238,  70],\n",
-       "       [699, 235,  82],\n",
-       "       [708, 236,  90],\n",
-       "       [717, 238,  94],\n",
-       "       [726, 240,  95],\n",
-       "       [760, 240,  96],\n",
-       "       [768, 238,  95],\n",
-       "       [777, 236,  91],\n",
-       "       [787, 235,  84],\n",
-       "       [795, 238,  73],\n",
-       "       [743, 259,  91],\n",
-       "       [743, 272,  95],\n",
-       "       [743, 284,  99],\n",
-       "       [743, 293,  98],\n",
-       "       [732, 296,  77],\n",
-       "       [737, 297,  80],\n",
-       "       [743, 299,  82],\n",
-       "       [749, 297,  81],\n",
-       "       [754, 296,  78],\n",
-       "       [704, 252,  72],\n",
-       "       [710, 251,  80],\n",
-       "       [718, 252,  80],\n",
-       "       [725, 255,  77],\n",
-       "       [718, 257,  78],\n",
-       "       [710, 257,  76],\n",
-       "       [761, 255,  77],\n",
-       "       [768, 252,  81],\n",
-       "       [776, 252,  82],\n",
-       "       [782, 253,  73],\n",
-       "       [776, 257,  77],\n",
-       "       [768, 257,  79],\n",
-       "       [721, 314,  62],\n",
-       "       [728, 312,  73],\n",
-       "       [738, 309,  80],\n",
-       "       [743, 310,  80],\n",
-       "       [748, 310,  80],\n",
-       "       [758, 312,  74],\n",
-       "       [765, 314,  63],\n",
-       "       [757, 319,  70],\n",
-       "       [750, 323,  73],\n",
-       "       [743, 323,  73],\n",
-       "       [736, 322,  73],\n",
-       "       [729, 319,  70],\n",
-       "       [723, 313,  63],\n",
-       "       [736, 314,  73],\n",
-       "       [743, 314,  75],\n",
-       "       [749, 314,  74],\n",
-       "       [764, 313,  64],\n",
-       "       [749, 315,  74],\n",
-       "       [743, 316,  75],\n",
-       "       [737, 315,  74]], dtype=int16)"
+       "(9486, 68, 3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b0365e3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = get_landmarks(\"animals\", \"008105\", 2, 'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a827a155",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9490, 68, 3)"
       ]
      },
      "execution_count": 10,
@@ -218,13 +181,13 @@
     }
    ],
    "source": [
-    "a[0]"
+    "m.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e2d117",
+   "id": "785847c4",
    "metadata": {},
    "outputs": [],
    "source": []
