Add new scripts

--- a/UDIVA/Prepare pose and face moves.ipynb
+++ b/UDIVA/Prepare pose and face moves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6ed805af",
    "metadata": {},
    "outputs": [],
@@ -16,18 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "62a7ee85",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_landmarks(task, session, participant, subset):\n",
     "    data_path = f'/nas/project_data/B1_Behavior/hakim/UDIVA/annotation/{subset}'\n",
-    "\n",
-    "    if task == 'talk':\n",
-    "        annotation_path = os.path.join(data_path, task, session, participant, 'annotations_cleaned_masked.hdf5')\n",
-    "    else:\n",
-    "        annotation_path = os.path.join(data_path, task, session, participant, 'annotations_raw.hdf5')\n",
+    "    annotation_path = os.path.join(data_path, task, session, participant, 'annotations_raw.hdf5')\n",
     "    \n",
     "    landmarks = []\n",
     "    with h5py.File(annotation_path, \"r\") as f:\n",
@@ -43,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "57dbea01",
    "metadata": {},
    "outputs": [],
@@ -61,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9c8d98f4",
    "metadata": {},
    "outputs": [],
@@ -78,7 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
+   "id": "7127833d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_pose_face_moves(out_3ddfa, face_moves):\n",
+    "    pose_face_moves = []\n",
+    "    for i in range (len(face_moves)):\n",
+    "        com = []\n",
+    "        if out_3ddfa[i] is not None:\n",
+    "            com = list(out_3ddfa[i]['pose']) + list(face_moves[i])\n",
+    "        else:\n",
+    "            com = [0,0,0] + list(face_moves[i])\n",
+    "        pose_face_moves.append(com)\n",
+    "    return np.array(pose_face_moves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "8cc78423",
    "metadata": {},
    "outputs": [
@@ -86,17 +101,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "232\n"
+      "(6944, 5)\n",
+      "(6944, 5)\n"
      ]
     }
    ],
    "source": [
-    "subset = 'train'\n",
+    "subset = 'test'\n",
     "# tasks = ['animals', 'ghost', 'lego', 'talk']\n",
     "tasks = ['lego']\n",
-    "annotation_dir = f'/nas/project_data/B1_Behavior/hakim/UDIVA/annotation/{subset}'\n",
     "\n",
-    "counter = 0\n",
+    "annotation_dir = f'/nas/project_data/B1_Behavior/hakim/UDIVA/annotation/{subset}'\n",
+    "output_3ddfa_dir = f'/nas/project_data/B1_Behavior/hakim/UDIVA/3DDFA/{subset}'\n",
+    "output_dir = f'/nas/project_data/B1_Behavior/hakim/UDIVA/pose_face_moves/{subset}'\n",
     "\n",
     "for task in tasks:\n",
     "    anno_path = os.path.join(annotation_dir, task)\n",
@@ -105,29 +122,37 @@
     "        session_path = os.path.join(anno_path, session)\n",
     "    \n",
     "        for par in os.listdir(session_path):\n",
-    "            output_name = task + '_' + session + '_' + par[:3]\n",
-    "            counter += 1\n",
+    "            file_name = task + '_' + session + '_' + par[:3]\n",
+    "            out_name = file_name + '.npy'\n",
+    "            out_path = os.path.join(output_dir, out_name)\n",
+    "            out_3ddfa_name = file_name + '.pickle'\n",
+    "            out_3ddfa_path = os.path.join(output_3ddfa_dir, out_3ddfa_name)\n",
     "            \n",
-    "#             landmarks = get_landmarks(task, session, par, subset)\n",
-    "#             mid_landmarks = get_mid_landmarks(landmarks)\n",
-    "#             face_moves = get_face_moves(mid_landmarks)\n",
+    "            if (task == 'talk' and session == '188189' and par == 'FC1_T'):\n",
+    "                continue\n",
+    "                \n",
+    "            if (os.path.exists(out_path)):\n",
+    "                continue\n",
     "            \n",
-    "\n",
-    "print(counter)"
+    "            with open(out_3ddfa_path, 'rb') as f:\n",
+    "                out_3ddfa = pickle.load(f, encoding='latin1')\n",
+    "            \n",
+    "            landmarks = get_landmarks(task, session, par, subset)\n",
+    "            mid_landmarks = get_mid_landmarks(landmarks)\n",
+    "            face_moves = get_face_moves(mid_landmarks)\n",
+    "            \n",
+    "            assert len(out_3ddfa) == len(face_moves)\n",
+    "            \n",
+    "            pose_face_moves = combine_pose_face_moves(out_3ddfa, face_moves)\n",
+    "                        \n",
+    "#             with open(out_path, 'wb') as f:\n",
+    "#                 np.save(f, pose_face_moves)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7127833d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b414bca2",
+   "id": "c89e06b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,36 +189,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "90784c31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "74e37af3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['param_list', 'roi_box_list', 'pose', 'landmark'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "p = '/nas/project_data/B1_Behavior/hakim/UDIVA/pose/train/lego_002003_FC1.pickle'\n",
-    "with open(p, 'rb') as f:\n",
-    "    a = pickle.load(f, encoding='latin1')\n",
-    "    \n",
-    "print(a[0].keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06032497",
    "metadata": {},
    "outputs": [],
    "source": []
