--- a/UDIVA/Unzip annotation.ipynb
+++ b/UDIVA/Unzip annotation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "61ec2fd1",
    "metadata": {},
    "outputs": [],
@@ -22,21 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "324a510b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = 'test'\n",
-    "tasks = ['animals', 'ghost', 'lego', 'talk']\n",
-    "# tasks = ['talk']\n",
+    "subset = 'val'\n",
+    "# tasks = ['animals', 'ghost', 'lego', 'talk']\n",
+    "tasks = ['talk']\n",
     "data_path = f'/nas/database/UDIVA/{subset}/annotations'\n",
     "new_data_path = f'/nas/project_data/B1_Behavior/hakim/UDIVA/annotation/{subset}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "46a1133c",
    "metadata": {},
    "outputs": [
@@ -44,42 +44,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/008105/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/008105/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/008105/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/008105/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/056109/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/056109/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/056109/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/056109/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/066067/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/066067/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/066067/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/066067/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/086087/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/086087/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/086087/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/086087/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/086089/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/086089/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/086089/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/086089/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/087088/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/087088/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/087088/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/087088/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/087089/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/087089/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/087089/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/087089/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/088089/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/088089/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/088089/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/088089/FC2_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/105117/FC1_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/105117/FC1_A/annotations_raw.hdf5  \n",
-      "Archive:  /nas/database/UDIVA/test/annotations/animals_annotations_test/105117/FC2_A/annotations_raw.zip\n",
-      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/test/animals/105117/FC2_A/annotations_raw.hdf5  "
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/001080/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/001080/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/001080/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/001080/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/001081/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/001081/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/001081/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/001081/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/038039/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/038039/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/038039/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/038039/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/052057/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/052057/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/052057/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/052057/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/080081/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/080081/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/080081/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/080081/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/085186/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/085186/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/085186/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/085186/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/085190/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/085190/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/085190/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/085190/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/119124/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/119124/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/119124/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/119124/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/119145/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/119145/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/119145/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/119145/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/119190/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/119190/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/119190/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/119190/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/124145/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/124145/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/124145/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/124145/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/141182/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/141182/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/141182/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/141182/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/141183/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/141183/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/141183/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/141183/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/146147/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/146147/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/146147/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/146147/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/180181/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/180181/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/180181/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/180181/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/181182/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/181182/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/181182/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/181182/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/182183/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/182183/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/182183/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/182183/FC2_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/183186/FC1_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/183186/FC1_T/annotations_raw.hdf5  \n",
+      "Archive:  /nas/database/UDIVA/val/annotations/talk_annotations_val/183186/FC2_T/annotations_raw_unmasked.zip\n",
+      "  inflating: /nas/project_data/B1_Behavior/hakim/UDIVA/annotation/val/talk/183186/FC2_T/annotations_raw.hdf5  \n"
      ]
     }
    ],
@@ -90,11 +126,10 @@
     "    \n",
     "    for session in os.listdir(anno_path):\n",
     "        session_path = os.path.join(anno_path, session)\n",
-    "        session_id = int(session)\n",
     "\n",
-    "        for p in os.listdir(session_path):\n",
-    "            annotation_zip = os.path.join(session_path, p, 'annotations_raw.zip')\n",
-    "            dest_path = os.path.join(new_data_path, task, session, p)\n",
+    "        for par in os.listdir(session_path):\n",
+    "            annotation_zip = os.path.join(session_path, par, 'annotations_raw_unmasked.zip')\n",
+    "            dest_path = os.path.join(new_data_path, task, session, par)\n",
     "            os.makedirs(dest_path, exist_ok=True)\n",
     "            command = \"unzip \" + annotation_zip + \" -d \" + dest_path\n",
     "            os.system(command)"
